--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <canvas id="canvas"></canvas>
 <script type="module">
 
-    import init, { WebHandle } from './app/pkg/app.js';
+    import init, { WebHandle } from './pkg/mgsdfe.js';
 
     async function run() {
         // Initialize the WASM module
